--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+# Build / dist junk
+DIST/
+build/
+.dart_tool/
+windows/flutter/ephemeral/
+TOOLS/_PREMIUM_OUT/
