--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,20 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+﻿# Flutter / Dart
 .dart_tool/
-.flutter-plugins-dependencies
-.pub-cache/
+.packages
 .pub/
-/build/
-/coverage/
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
-# Build / dist junk
-DIST/
 build/
-.dart_tool/
-windows/flutter/ephemeral/
-TOOLS/_PREMIUM_OUT/
-# Build / dist / local junk
+coverage/
+
+# Platform builds
+windows/runner/Release/
+macos/Flutter/ephemeral/
+linux/flutter/ephemeral/
+
+# Outputs / binaries
 DIST/
-build/
-.dart_tool/
-windows/flutter/ephemeral/
-TOOLS/_PREMIUM_OUT/
-TOOLS/_BACKUPS/
+*.exe
+*.zip
+*.log
+
+# Backups
+*.bak_*
