--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,13 @@ version: 1.0.3+5
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
-
 dependencies:
+  file_picker: ^8.0.6
+
+  url_launcher: ^6.2.6
+
+  shared_preferences: ^2.2.3
+
   path: ^1.9.0
   sqflite_common_ffi: ^2.3.3
   sqflite: ^2.3.3+1
@@ -14,40 +19,34 @@ dependencies:
   fl_chart: ^0.68.0
   flutter:
     sdk: flutter
-
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.0
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.0
-
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.4
-
   video_player: ^2.9.2
   chewie: ^1.8.5
-
   dio: ^5.6.0
   crypto: ^3.0.3
   intl: ^0.19.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
   isar_generator: ^3.1.0+1
   build_runner: ^2.4.12
-
 flutter:
   uses-material-design: true
   assets:
+    - assets\seed\exercises_seed_v1.json
     - assets/images/
     - assets/videos/
     - assets/images/
     - assets/icons/
     - assets/media/bundled/thumbs/
     - assets/media/bundled/previews/
-
 
 
 
